# cogutil

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  circle.yml  cogutil.opam
.circleci/: config.yml
cmake/: AddCxxtest.cmake  CMakeLists.txt  CogUtilConfig.cmake.in  FindCxxtest.cmake  FindCython.cmake  FindFolly.cmake  FindGNUBacktrace.cmake  FindGuile.cmake  FindOCaml.cmake  FindPGSQL.cmake  FindParallelSTL.cmake  FindPython3Interp.cmake  FindRocksDB.cmake  FindSparseHash.cmake  FindTBB.cmake  FindVALGRIND.cmake  Findcpprest.cmake  OpenCogFindGuile.cmake  OpenCogFindPython.cmake  OpenCogFunctions.cmake  OpenCogGccOptions.cmake  OpenCogInstallOptions.cmake  OpenCogLibOptions.cmake  OpenCogTestOptions.cmake  Summary.cmake  UseOCaml.cmake
doc/: CMakeLists.txt  Doxyfile  README.archlinux  README.fedora  README.gentoo  README.opensuse  README.ubuntu  README.win32
doc/doxydoc/: bldtargets.dox  fsstructure.dox  layout.ini  libcogutil.dox  libraries.dox  main.dox  update-links.py
etc/: CMakeLists.txt  opencog.conf
lib/: CMakeLists.txt  FindIberty.cmake  cogutil.pc.in  cogutil.spec  opencog.spec
opencog/util/: CMakeLists.txt  Config.cc  Config.h  Counter.h  Cover_Tree.h  KLD.h  Logger.cc  Logger.h  MannWhitneyU.h  RandGen.h  StringManipulator.cc  StringManipulator.h  StringTokenizer.cc  StringTokenizer.h  ThreadLocal.h  algorithm.h  ansi.h  async_buffer.h  async_method_caller.h  backtrace-symbols.c  backtrace-symbols.h  based_variant.h  cluster.c  cluster.h  cogutil.h  comprehension.h  concurrent_queue.h  concurrent_set.h  concurrent_stack.h  digraph.h  dorepeat.h  empty_string.h  exceptions.cc  exceptions.h  files.cc  files.h  functional.h  hashing.h  iostreamContainer.h  jaccard_index.h  (+37 more)
opencog/util/boost_ext/accumulators/statistics/: CMakeLists.txt  geometric_mean.h  geometric_mean_mirror.h
scripts/: README.md
scripts/util/: component-log.sh  filter-log.sh  log_per_component.sh  sort-log.py  time.sh
tests/: CMakeLists.txt
tests/util/: CMakeLists.txt  ConfigUTest.cxxtest  CounterUTest.cxxtest  KLDUTest.cxxtest  LoggerUTest.cxxtest  StringTokenizerUTest.cxxtest  ThreadLocalUTest.cxxtest  WatermarkUTest.cxxtest  algorithmUTest.cxxtest  comprehensionUTest.cxxtest  functionalUTest.cxxtest  iostreamContainerUTest.cxxtest  lazy_selectorUTest.cxxtest  lru_cacheUTest.cxxtest  numericUTest.cxxtest  randomUTest.cxxtest  rankingUTest.cxxtest  sigslotUTest.cxxtest  zipfUTest.cxxtest
