(** OPAM (OCaml Package Manager) module for CogUtil *)
(** *)
(** This is in the root directory because I cannot figure out *)
(** how to tell opam to look for it somewhere else. Sigh. *)
(** *)
(** To build, say: `opam install .` in the root git directory. *)
(** Finally, say `eval $(opam env)` *)

opam-version: "2.0"
name: "cogutil"
version: "opam-1.0"
synopsis: "OpenCog CogUtil base package"
description: """
The CogUtil package provides base infrastructure for other OpenCog
packages. This includes scripts for building OCaml bindings for
OpenCog modules.
"""
maintainer: "linasvepstas@gmail.com"
authors: "Linas Vepstas"
license: "AGPL-3.0-or-later"
homepage: "https://opencog.org"
bug-reports: "https://github.com/opencog/cogutil/issues"
dev-repo: "git+https://github.com/opencog/cogutil/"
depends: [ "g++" "cmake" "libboost-dev" "libboost-program-options-dev" "libboost-system-dev" "libboost-thread-dev" "binutils-dev" "libiberty-dev" "ocaml" "ocamlfind" ]
build: [
  ["cmake" "-DCMAKE_INSTALL_PREFIX=~/.opencog/usr" "."]
  [make]
]
install: ["make" "install"]
